# aws-ts-rag-opensearch

./: .gitignore  NewYork.md  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  requirements.txt
app/: Dockerfile  pyproject.toml
app/streamlit_app/: main.py
app/streamlit_app/config/: __init__.py  providers.py
app/streamlit_app/interface/: __init__.py  main_panel.py  side_panel.py
app/streamlit_app/utils/: embeddings.py  prompts.py
app/streamlit_app/vector/: __init__.py  cosmosdb.py  opensearch.py
local/: .env  docker-compose.yaml
